# OpenLimb

./: .gitignore  GA_results-25-09-07.csv  GA_results.csv  GenerateRandomLimbs.py  LMOptimisationAttempt.ipynb  SSM_Driver copy.ipynb  SSM_Driver.ipynb  SSM_Driver.py  VAE_test.ipynb  build_docker.sh  component_exploration.ipynb  data_test.ipynb  dockerfile  generate_limbs.sh  genetic_alg.ipynb  limb_00000.stl  limb_00000_boneless.stl  measure_limbs.ipynb  measure_limbs.py  meaure_limbs.ipynb  nb_exporter.py  pyproject.toml  run_docker.sh  verts.txt
scripts/: entrypoint.sh  generate_limbs.sh
stls/: limb_1.stl  limb_10.stl  limb_11.stl  limb_12.stl  limb_13.stl  limb_14.stl  limb_15.stl  limb_16.stl  limb_17.stl  limb_18.stl  limb_19.stl  limb_2.stl  limb_20.stl  limb_21.stl  limb_22.stl  limb_23.stl  limb_24.stl  limb_25.stl  limb_26.stl  limb_27.stl  limb_28.stl  limb_29.stl  limb_3.stl  limb_30.stl  limb_31.stl  limb_32.stl  limb_33.stl  limb_34.stl  limb_35.stl  limb_36.stl  limb_37.stl  limb_38.stl  limb_39.stl  limb_4.stl  limb_40.stl  limb_41.stl  limb_42.stl  limb_43.stl  limb_44.stl  limb_45.stl  (+11 more)
wandb/: latest-run
wandb/run-20250721_152708-e36o201a/files/: requirements.txt  wandb-metadata.json
wandb/run-20250721_153112-qyvmbcwp/: run-qyvmbcwp.wandb
wandb/run-20250721_153112-qyvmbcwp/files/: wandb-metadata.json
