[project]
name = "openlimb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "libigl==2.5.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
]
